# lexin-client-v2

./: LICENSE  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
src-renderer/: app.config.ts  app.vue  index.d.ts
src-renderer/archive/: Output.vue  OutputTypeIcon.vue
src-renderer/assets/css/: main.css  tailwind.css
src-renderer/components/: Markdown.vue  SvgsIcon.vue  Test.vue  TextAutosize.vue  Toolsbar.vue
src-renderer/components/Base/: Toolsbar.vue
src-renderer/components/Translate/: Input.vue  LangSelect.vue  Output.vue  OutputTabs.vue  Toolsbar.vue  TypeIcon.vue  TypeSelect.vue  Volume.vue
src-renderer/components/Win/: TitleBar.vue
src-renderer/layouts/: container.vue  default.vue  notstyle.vue  titlebar.vue
src-renderer/pages/: debug-lab.vue  index.vue  main.vue  playground.vue  translate-float.vue  translate.vue
src-renderer/plugins/: 01.global.ts  02.tauriapi.ts  03.translate.ts  index.d.ts  tauriapi.ts
src-renderer/stores/: translate.ts
src-tauri/: Cargo.toml  tauri-dev.conf.json  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/black/: icon.icns
src-tauri/icons/black-bg/: icon.icns
src-tauri/icons/white/: icon.icns
src-tauri/resources/: default_v0.json  languages.json
src-tauri/src/: consts.rs  lib.rs
src-tauri/src/cmds/: mod.rs  settings.rs
src-tauri/src/core/: state.rs
src-tauri/src/module/: translate.rs
src-tauri/src/plugin/: keyevent.rs  mod.rs
src-tauri/src/plugin/keyevent/: impl_windows.rs  impl_windows_v2.rs
src-tauri/src/utils/: mod.rs  monitor_ex.rs  path.rs  settings.rs
src-tauri/src/windows/: home.rs  translate.rs  tray.rs
