[package]
name = "lexin"
version = "0.1.0"
description = "Lexin Navigator"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.17", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.22", features = [
    "tray-icon",
    "image-ico",
    "image-png",
    "unstable",
] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-os = "2.0.0-beta.6"
lazy_static = "1.4.0"
tauri-plugin-log = "2.0.0-beta.6"
tauri-plugin-store = "2.0.0-beta.8"
tauri-plugin-http = "2.0.0-beta.9"
thiserror = "1.0.61"
base64 = "0.22.1"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
futures = "0.3.30"
mouse_position = "0.1.4"
keycode = "0.4.0"
tauri-plugin-clipboard-manager = "2.1.0-beta.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }

[target."cfg(windows)".dependencies]
windows = { version = "0.56.0", features = [
    "Win32_Graphics_Gdi",
    "UI_WindowManagement",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell_Common"
] }
windows-core = "0.56.0"
