[package]
name = "lexin"
version = "0.1.0"
description = "Lexin Navigator"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[profile.release]
opt-level = "s"

[dependencies]
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
tauri = { version = "2.0.0-rc.0", features = [
    "tray-icon",
    "image-ico",
    "image-png",
    "unstable",
] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" , version = "2.0.0-rc.0" }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" , version = "2.0.0-rc.0" }
tauri-plugin-os = "2.0.0-rc.0"
lazy_static = "1.5.0"
tauri-plugin-log = "2.0.0-rc.0"
tauri-plugin-store = "2.0.0-rc.0"
tauri-plugin-http = "2.0.0-rc"
thiserror = "1.0.63"
base64 = "0.22.1"
reqwest = { version = "0.12.4", features = ["json", "stream", "multipart"] }
futures = "0.3.30"
log = { version = "0.4.22", features = ["kv_unstable"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = { version = "2.0.0-rc" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
keycode = "0.4.0"
tauri-plugin-clipboard-manager = "2.0.0-rc"

[target."cfg(windows)".dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Graphics_Gdi",
    "UI_WindowManagement",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell_Common",
    "Win32_Foundation",
    "Win32_UI_Controls_RichEdit",
    "UI_Accessibility",
    "UI_UIAutomation",
    "UI_UIAutomation_Core",
    "Win32_System_Com"
] }
windows-core = "0.58.0"
